--- a/src/pages/checkout/Checkout.css
+++ b/src/pages/checkout/Checkout.css
@@ -1,191 +1,154 @@
 
-  
-  input,
-  button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    outline: none;
-    border-style: none;
-  }
+form {
+  width: 30vw;
+  align-self: center;
+  box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
+    0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+  border-radius: 7px;
+  padding: 40px;
+}
 
+input {
+  border-radius: 6px;
+  margin-bottom: 6px;
+  padding: 12px;
+  border: 1px solid rgba(50, 50, 93, 0.1);
+  max-height: 44px;
+  font-size: 16px;
+  width: 100%;
+  background: white;
+  box-sizing: border-box;
+}
 
-  
-  .AppWrapper {
-    width: 500px;
-    height: 400px;
-    position: relative;
+.result-message {
+  line-height: 22px;
+  font-size: 16px;
+}
+
+.result-message a {
+  color: rgb(89, 111, 214);
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.hidden {
+  display: none;
+}
+
+#card-error {
+  color: rgb(105, 115, 134);
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 12px;
+  text-align: center;
+}
+
+#card-element {
+  border-radius: 4px 4px 0 0;
+  padding: 12px;
+  border: 1px solid rgba(50, 50, 93, 0.1);
+  max-height: 44px;
+  width: 100%;
+  background: white;
+  box-sizing: border-box;
+}
+
+#payment-request-button {
+  margin-bottom: 32px;
+}
+
+/* Buttons and links */
+.button-checkout {
+  background: #5469d4 !important;
+  font-family: Arial, sans-serif;
+  color: #ffffff;
+  border-radius: 0 0 4px 4px;
+  border: 0;
+  margin: 12px 5px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  display: block;
+  transition: all 0.2s ease;
+  box-shadow: 0px 4px 5.5px 0px rgba(0, 0, 0, 0.07);
+  width: 100%;
+}
+
+.button-checkout:hover {
+  filter: contrast(115%);
+}
+
+.button-checkout:disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
+/* spinner/processing state, errors */
+.spinner,
+.spinner:before,
+.spinner:after {
+  border-radius: 50%;
+}
+
+.spinner {
+  color: #ffffff;
+  font-size: 22px;
+  text-indent: -99999px;
+  margin: 0px auto;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  box-shadow: inset 0 0 0 2px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.spinner:before,
+.spinner:after {
+  position: absolute;
+  content: "";
+}
+
+.spinner:before {
+  width: 10.4px;
+  height: 20.4px;
+  background: #5469d4;
+  border-radius: 20.4px 0 0 20.4px;
+  top: -0.2px;
+  left: -0.2px;
+  -webkit-transform-origin: 10.4px 10.2px;
+  transform-origin: 10.4px 10.2px;
+  -webkit-animation: loading 2s infinite ease 1.5s;
+  animation: loading 2s infinite ease 1.5s;
+}
+
+.spinner:after {
+  width: 10.4px;
+  height: 10.2px;
+  background: #5469d4;
+  border-radius: 0 10.2px 10.2px 0;
+  top: -0.1px;
+  left: 10.2px;
+  -webkit-transform-origin: 0px 10.2px;
+  transform-origin: 0px 10.2px;
+  -webkit-animation: loading 2s infinite ease;
+  animation: loading 2s infinite ease;
+}
+
+@keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
-  
-  @keyframes fade {
-    from {
-      opacity: 0;
-      transform: scale3D(0.95, 0.95, 0.95);
-    }
-    to {
-      opacity: 1;
-      transform: scale3D(1, 1, 1);
-    }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
-  
-  .Form {
-    animation: fade 200ms ease-out;
+}
+
+@media only screen and (max-width: 600px) {
+  form {
+    width: 80vw;
   }
-  
-  .FormGroup {
-    margin: 0 15px 20px;
-    padding: 0;
-    border-style: none;
-    background-color: #6487fe;
-    will-change: opacity, transform;
-    box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-      inset 0 1px 0 #829fff;
-    border-radius: 4px;
-  }
-  
-  .FormRow {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    margin-left: 15px;
-    border-top: 1px solid #819efc;
-  }
-  
-  .FormRow:first-child {
-    border-top: none;
-  }
-  
-  .FormRowLabel {
-    width: 15%;
-    min-width: 70px;
-    padding: 11px 0;
-    color: #c4f0ff;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  
-  @keyframes void-animation-out {
-    0%,
-    to {
-      opacity: 1;
-    }
-  }
-  .FormRowInput:-webkit-autofill {
-    -webkit-text-fill-color: #fce883;
-    /* Hack to hide the default webkit autofill */
-    transition: background-color 100000000s;
-    animation: 1ms void-animation-out;
-  }
-  
-  .FormRowInput {
-    font-size: 16px;
-    width: 100%;
-    padding: 11px 15px 11px 0;
-    color: #000;
-    background-color: transparent;
-    animation: 1ms void-animation-out;
-  }
-  
-  .FormRowInput::placeholder {
-    color: #87bbfd;
-  }
-  
-  .StripeElement--webkit-autofill {
-    background: transparent !important;
-  }
-  
-  .StripeElement {
-    width: 100%;
-    padding: 11px 15px 11px 0;
-  }
-  
-  .SubmitButton {
-    display: block;
-    font-size: 16px;
-    width: calc(100% - 30px);
-    height: 40px;
-    margin: 40px 15px 0;
-    background-color: #f570e4;
-    box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-      inset 0 1px 0 #ffb9f6;
-    border-radius: 4px;
-    color: #fff;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 100ms ease-in-out;
-    will-change: transform, background-color, box-shadow;
-  }
-  
-  .SubmitButton:active {
-    background-color: #d782d9;
-    box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-      inset 0 1px 0 #e298d8;
-    transform: scale(0.99);
-  }
-  
-  .SubmitButton.SubmitButton--error {
-    transform: translateY(15px);
-  }
-  .SubmitButton.SubmitButton--error:active {
-    transform: scale(0.99) translateY(15px);
-  }
-  
-  .SubmitButton:disabled {
-    opacity: 0.5;
-    cursor: default;
-    background-color: #6487fe;
-    box-shadow: none;
-  }
-  
-  .ErrorMessage {
-    color: #000;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    padding: 0 15px;
-    font-size: 13px;
-    margin-top: 0px;
-    width: 100%;
-    transform: translateY(-15px);
-    opacity: 0;
-    animation: fade 150ms ease-out;
-    animation-delay: 50ms;
-    animation-fill-mode: forwards;
-    will-change: opacity, transform;
-  }
-  
-  .ErrorMessage svg {
-    margin-right: 10px;
-  }
-  
-  .Result {
-    margin-top: 50px;
-    text-align: center;
-    animation: fade 200ms ease-out;
-  }
-  
-  .ResultTitle {
-    color: #000;
-    font-weight: 500;
-    margin-bottom: 8px;
-    font-size: 17px;
-    text-align: center;
-  }
-  
-  .ResultMessage {
-    color: #9cdbff;
-    font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 25px;
-    line-height: 1.6em;
-    text-align: center;
-  }
-  
-  .ResetButton {
-    border: 0;
-    cursor: pointer;
-    background: transparent;
-  }
-  
+}
